ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
:root {
    --bg:       var(--primary--6);
    --titleBg:  var(--primary--8);
    --buttonBg: var(--primary);
    --hourHeight: 3rem;
    --calendarStrongLine: var(--main-bg-color);
    --calendarWeakLine: color(var(--calendarStrongLine) alpha(.3));
    --allDayBg: var(--primary--4);
}

.CalendarWidget {
    flex-grow: 0;
    display: flex;
    flex-direction: column;
    position: relative;
    border-spacing: 0;
    font-weight: 200;
    max-width: 45em;

    & > header { margin-bottom: 1em; }

    & caption {
        padding: 1em 0;
        text-align: left;
    }
}

.CalendarWidget-date {
    font-size: 1.5em;
    flex: 1;
}

.CalendarWidget-substitution {
    flex: 1;
    display: flex;
    flex-direction: column;
}

/* buttons */

.Calendar-navigation button {
    font-size: .8em;
    height:   2.5em;
    background-color: var(--buttonBg);
}

.CalendarWidget-todayButton.Button { margin-right: .5rem; }


/* Calendar Navigation */

.Calendar-navigation {
    flex: 1;
    display: flex;
    align-items: center;
    margin-bottom: 1em;
}

.Calendar-navigation-buttons {
    display: flex;
    margin-right: 1em;
}

.CalendarWidget-previousMonthButton {
    & svg {
        transform: rotate(180deg);
    }
}

/* Days Header Height */

.CalendarWidget thead td {
    background-color: var(--titleBg);
    font-weight: 200;
    text-align: center;
}

.CalendarWidget-day {
    height: 5em;

    @media (min-height: 70em) {
        height: 8em;
    }
}

.CalendarWidget-taskCategories {
    display: flex;
    align-items: center;
}


/* Calendar View */

.CalendarWidget-view {
    flex: 1;
    display: flex;
    flex-direction: column;
}

/*

Header

*/

.CalendarWidget-view-header {
    display: flex;
    flex-shrink: 0;
    align-items: flex-end;
    /* added to match the CalendarWidget-view main border */
    border: 1px solid transparent;
    position: relative;
}

.CalendarWidget-view-timezone {
    flex: 1;
    text-align: center;
    font-size: .75rem;
}

.CalendarWidget-view-days {
    display: flex;
    flex: 1;
    background-color: var(--titleBg);
}

.CalendarWidget-view-day {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.CalendarWidget-view-day-title {
    flex: 1;
    align-self: center;
    font-size: .8rem;
    padding: .5rem .25rem;
    color: var(--grey-3);
}

/* Recurring Events shown in Day Header */

.CalendarWidget-allDayEvents {
    position: relative;
    padding: .15em .25em;
    padding-bottom: 1em;
    background-color: var(--allDayBg);
}

/*

Main Content

*/

.CalendarWidget-view-main {
    position: relative;
    flex: 1;
    border: 1px solid var(--calendar-line--strong);
    background-color: var(--bg);
    display: flex;

    & .Scrollview-transform {
        flex: none;
    }

    /* magic numbers :( */
    height: 22.5em;

    @media (min-height: 70em) {
        height: 40em;
    }
}

.CalendarWidget-view-content {
    display: flex;
    position: relative;
}

/* hours */

.CalendarWidget-view-hours {
    flex: 1;
    position: relative;
    background-color: var(--primary);

    /* Grid */

    &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-image: linear-gradient(var(--calendar-line--strong) 1px, transparent 1px);
        background-size: var(--hourHeight) var(--hourHeight);
        background-position: -1px -1px;
    }
}

.CalendarWidget-view-hour {
    text-align: right;
    font-size: .8rem;
    padding: .25rem .5rem;
    position: relative;
    line-height: 1.5em;
    height: var(--hourHeight);
    border-right: 1px solid var(--calendar-line--strong);
}

/* Day Columns */

.CalendarWidget-view-dayColumns {
    flex: 1;
    display: flex;
    position: relative;

    /* Grid */

    &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-image: linear-gradient(var(--calendar-line--strong) 1px, transparent 1px),
                          linear-gradient(var(--calendar-line--weak) 1px, transparent 1px);
        background-size: var(--hourHeight) var(--hourHeight), var(--hourHeight) var(--hourHeight);
        background-position: -1px -1px, -1px calc(var(--hourHeight) / 2 - 1px);
    }
}

.CalendarWidget-view-dayColumn {
    position: relative;
    flex: 1;
    flex-direction: column;

    &:not(:last-child) {
        border-right: 1px solid var(--calendar-line--strong);
    }
}

/* Axis */

.CalendarWidget-view-column--axis {
    flex: 1;
    max-width: calc(var(--hourHeight));

    @nest .CalendarWidget-view-header & {
        display: flex;
    }
}

/*

Calendar Events

*/

.CalendarWidget-event {
    width: 100%;
    display: none;
    position: absolute;
    align-items: center;
    cursor: pointer;
    transform: translateY(2px);
    border: 1px solid transparent;

    /* $fixme - remove one of these classes */
    &.is-displayed,
    &.is-visible {
        display: block;
    }

    &.event-is-overlayed {
        border-color: var(--bg);
        right: 0;
        width: auto;
    }

    @nest .CalendarWidget-allDayEvents & {
        position: relative;
    }

    @nest .MonthView & {
        position: relative;
        width: auto;
    }
}

.CalendarWidget-event-inner {
    overflow: hidden;
    border-radius: 2px;
    font-size: .75rem;
    padding: 0 .1rem;
    color: var(--white);
}

.CalendarWidget-event.type-rsync_copy .CalendarWidget-event-inner                        { background-color: var(--task-rsync-color); }
.CalendarWidget-event.type-volume_scrub .CalendarWidget-event-inner                      { background-color: var(--task-scrub-color); }
.CalendarWidget-event.type-replication_replicate_dataset .CalendarWidget-event-inner     { background-color: var(--task-replication-color); }
.CalendarWidget-event.type-disk_parallel_test .CalendarWidget-event-inner                { background-color: var(--task-smart-color); }
.CalendarWidget-event.type-update_checkfetch .CalendarWidget-event-inner                 { background-color: var(--task-update-color); }
.CalendarWidget-event.type-volume_snapshot_dataset .CalendarWidget-event-inner           { background-color: var(--task-snapshot-color); }
.CalendarWidget-event.type-calendar_task_command .CalendarWidget-event-inner             { background-color: var(--task-command-color); }

.CalendarWidget-event.is-selected .CalendarWidget-event-inner {
    color: var(--white);
    background-color: var(--color-selected);
}

